--- a/nextflow.config
+++ b/nextflow.config
@@ -40,7 +40,6 @@ profiles {
                 
                 withLabel: process_high {
                     cpus = 16
-                    // clusterOptions = "-P bf528 -l mem_per_core=8G"
                 }
         }
     }
@@ -50,7 +49,6 @@ profiles {
     }
 }
 
-//Change the queueSize to enable more parallel jobs (remember the SCC is a shared resource)
 executor {
     $sge {
         queueSize = 17
@@ -61,4 +59,4 @@ executor {
 }
 
 //Miscellaneous CLI flags
-resume = true
+//resume = true
