--- a/nextflow.config
+++ b/nextflow.config
@@ -23,7 +23,7 @@ profiles {
     cluster {
         process {
                 executor = 'sge'
-                clusterOptions = '-P wax-es'
+                clusterOptions = '-P <lab_code>'
                 penv = 'omp'
 
                 withLabel: process_single {
