--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,16 @@
+includeConfig 'cluster.config'
+includeConfig 'aws.config'
+
+profiles {
+    cluster {
+        includeConfig 'cluster.config'
+    }
+
+    aws {
+        includeConfig 'aws.config'
+    }
+}
+
 params {
 
     // Reads and references
